# wm_frame_to_box

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  README2.md  package.xml
include/: wm_frame_to_box.h
launch/: wm_frame_to_box.launch
msg/: BoundingBox3D.msg  BoundingBoxes2D.msg  BoundingBoxes3D.msg
src/: wm_frame_to_box.cpp
srv/: GetBoundingBoxes3D.srv
