<package>

  <name>wm_frame_to_box</name>
  <version>0.3.0</version>
  <description>
    ROS node receiving 2D bounding boxes from YOLO v2 (ROS wrapper) and convert them to 3D bounding boxes using camera depthcloud
  </description>
  <author email="philippe117@live.fr">Philippe La Madeleine</author>
  <maintainer email="philippe117@live.fr">Philippe La Madeleine</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  <build_depend>eigen_conversions</build_depend>
  <run_depend>eigen_conversions</run_depend>
  <build_depend>tf_conversions</build_depend>
  <run_depend>tf_conversions</run_depend>
  <build_depend>image_transport</build_depend>
  <run_depend>image_transport</run_depend>
  <build_depend>sara_msgs</build_depend>
  <run_depend>sara_msgs</run_depend>

</package>
